# Trading_app

./: .dockerignore  .env-example  .env-non-dev  .gitignore  Dockerfile  Dockerfile-Render  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
auth/: database.py
docker/: celery.sh
fixtures/: fixture.py  trades.json  users.json
migrations/: env.py
migrations/versions/: 06f27f21e855_update_user_table_add_auth_columns.py  3_a67191143688_add_operation.py  41533a6b3e02_database_creation.py  4_b174408d8589_add_messages_module.py  4cb81013b809_update_roles_to_rols_users_to_user.py  943ef5d14267_new_db.py  b156afee0312_add_hash_password.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: auth.py  base_config.py  manager.py  models.py
src/chat/: router.py  ws_connect.py
src/operations/: router.py  tasks.py
src/pages/: router.py
src/templates/: base.html  chat.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
