[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = "FastAPI app"
authors = ["NikolayZemelko <zemelko1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.2"}
flake8 = "^6.1.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
redis-om = "^0.2.1"
fastapi-cache2 = "^0.2.1"
celery = "^5.3.4"
flower = "^2.0.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
Faker = "^19.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"